# Monster-Cock-Builder

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  center.py  contract_abi.json  contract_test_abi.json  mck.json  requirements.txt  shapes.py  test.json
data/: backup.txt  margin_size.txt  schemas.txt
generator/: builder.py  chicken_type.py  colors_data.py  custom_fields.py  globals.py  image_gen.py  random_data.py  utils.py
generator/attributes/: attribute_builder.py  attributes.py  canvas.py  gradients.py
generator/checker/: check.py
generator/fractals/: bleed.py  box_size.py  crazy_circles.py  fractals.py  fractify.py  polygon.py  squares.py  stripes.py
generator/names/: read_names.py  scrape.py
generator/tracker/: tracker.py
model/: admaker.py  mosaic.py  verify.py
notebooks/: minmax.ipynb  robust.ipynb  schemas.ipynb
scripts/: mm.bat  populateschemas.bat  verify.bat
src/: main.rs
src/learning/: data_set.rs  interface.rs  mod.rs
src/utils/: image_utils.rs  mod.rs  names.rs  randomify.rs  rgb_conversions.rs
